# Kinetics-Analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default_config.json
config/substrates/: glucose.json  p_coumaric_acid.json  p_hydroxybenzoic_acid.json  syringic_acid.json  vanillic_acid.json  xylose.json
docs/: USER_GUIDE.md
scripts/: __init__.py  analyze_results.py  compare_models.py  consensus_model_summary.py  convert_units.py  estimate_bounds.py  fit_individual.py  fit_parameters.py  make_presentation.py  plot_data.py  robust_fit.py  run_all_models.py  run_diagnostics.py  run_simulation.py
src/: __init__.py
src/core/: __init__.py  monod.py  ode_systems.py  oxygen.py  solvers.py
src/fitting/: __init__.py  bootstrap.py  diagnostics.py  objective.py  optimizer.py  robust_fitter.py  scaling.py  statistics.py  two_stage.py  weighting.py
src/io/: __init__.py  config_loader.py  data_loader.py  pdf_report.py  results_writer.py
src/utils/: __init__.py  conversions.py  master_table.py  oxygen_limitation_analysis.py  plotting.py  theoretical_bounds.py  validation.py
streamlit_app/: README.md  __init__.py  app.py  config.py  llm_integration.py  requirements.txt  workflow_runner.py
streamlit_app/components/: __init__.py  config_panel.py  data_upload.py  plots.py  sidebar.py  (+1 more)
tests/: __init__.py  test_diagnostics.py  test_monod.py  test_scaling.py  test_solvers.py  test_theoretical_bounds.py  test_workflows.py
workflows/: __init__.py  base_workflow.py  dual_monod.py  dual_monod_lag.py  individual_condition.py  single_monod.py  single_monod_lag.py
